NXP-22843: Add an Elasticsearch checker
Only the RestClient mode is supported